Fix stacked tabs headers not readable in dark mode when active

--- a/theme.css
+++ b/theme.css
@@ -1838,6 +1838,12 @@ div[aria-label="Help"]:hover {
 	color: var(--text-muted);
 }
 
+.is-focused .mod-stacked.mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
+.is-focused .mod-stacked .workspace-tab-header.is-active,
+.mod-stacked .workspace-tab-header.is-active {
+	color: var(--text-muted);
+}
+
 .is-focused .mod-active .workspace-tab-header.is-active .workspace-tab-header-inner-title,
 .is-focused .workspace-tab-header.is-active,
 .workspace-tab-header.is-active {
